Refined the reddit module and migrated to MontiCore 6